--- a/package.json
+++ b/package.json
@@ -246,20 +246,22 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "del": "^3.0.0",
-    "electron": "6.1.7",
+    "electron": "11.0.2",
     "electron-builder": "22.8.1",
     "electron-notarize": "^0.2.1",
-    "electron-rebuild": "^1.9.0",
+    "electron-packager": "^15.1.0",
+    "electron-rebuild": "^2.0.0",
     "electron-reload": "^1.5.0",
-    "mini-css-extract-plugin": "^0.9.0",
     "file-loader": "^2.0.0",
     "font-awesome": "4.7.0",
     "gulp": "^4.0.0",
     "gulp-google-webfonts": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "ngx-infinite-scroll": "7.0.1",
     "node-abi": "^2.9.0",
+    "node-gyp": "^7.1.0",
     "node-loader": "^0.6.0",
     "node-sass": "^4.13.1",
     "rimraf": "^2.6.2",
@@ -296,7 +298,7 @@
     "electron-log": "2.2.17",
     "electron-store": "1.3.0",
     "electron-updater": "4.3.5",
-    "keytar": "4.13.0",
+    "keytar": "7.2.0",
     "lunr": "2.3.3",
     "node-forge": "0.7.6",
     "nord": "0.2.1",
